@@ -106,14 +106,14 @@ public class Mp4TagByteField extends Mp4TagTextField
             case 2:
             {
                 //Save as two bytes
-                Short shortValue = new Short(content);
+                Short shortValue = Short.valueOf(content);
                 byte rawData[] = Utils.getSizeBEInt16(shortValue);
                 return rawData;
             }
             case 1:
             {
                 //Save as 1 bytes
-                Short shortValue = new Short(content);
+                Short shortValue = Short.valueOf(content);
                 byte rawData[] = new byte[1];
                 rawData[0] = shortValue.byteValue();
                 return rawData;
@@ -121,7 +121,7 @@ public class Mp4TagByteField extends Mp4TagTextField
             case 4:
             {
                 //Assume could be int
-                Integer intValue = new Integer(content);
+                Integer intValue = Integer.valueOf(content);
                 byte rawData[] = Utils.getSizeBEInt32(intValue);
                 return rawData;
             }
