@@ -20,11 +20,8 @@ import java.util.ArrayList;
  * playtitlenameReserved:0 bytes
  */
 public class Mp4TrackField extends Mp4TagTextNumberField {
-    private static final int NONE_VALUE_INDEX = 0;
     private static final int TRACK_NO_INDEX = 1;
     private static final int TRACK_TOTAL_INDEX = 2;
-    private static final int NONE_END_VALUE_INDEX = 3;
-
     /**
      * Create new Track Field parsing the String for the trackno/total
      *
@@ -36,7 +33,7 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
         super(Mp4FieldKey.TRACK.getFieldName(), trackValue);
 
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
 
         String values[] = trackValue.split("/");
         switch (values.length) {
@@ -46,8 +43,8 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
                 } catch (NumberFormatException nfe) {
                     throw new FieldDataInvalidException("Value of:" + values[0] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             case 2:
@@ -61,7 +58,7 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
                 } catch (NumberFormatException nfe) {
                     throw new FieldDataInvalidException("Value of:" + values[1] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             default:
@@ -79,10 +76,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
 
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short)trackNo);
-        numbers.add(new Short("0"));
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
@@ -94,10 +91,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField {
     public Mp4TrackField(int trackNo, int total) {
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short)trackNo);
         numbers.add((short)total);
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
